--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,20 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+.plan-card {
+  border: 2px solid white;
+  margin: 20px;
+  padding: 20px;
+  display: flex;
+}
+.inner-container {
+  
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+span {
+  font-weight: bold;
+}
